v 1.4.0.4 (25 jan 2017)
Turn Smoothly was renamed to Chronosurge
Blazar will now boost RR by 2%
Black Nova will now boost energy production by 2%
Ctrl+Click will now by x10 buildings
Scientist trait effect was changed from 1% to 5%

changes by tommitscheck:
Fixed Stats menu item not working in FF

v 1.4.0.3 (14 jan 2017)

Codex Vox, Codex Logos, Codex Agrum for better post-reset runs
Blazar will now affect Impedances and Chronomancy/Unicornmancy
Neural Networks

v 1.4.0.2 (6 jan 2017)
Void Rifts
AI placeholder techs
Rorschach hub placeholder

v 1.4.0.1 (5 dec 2016)
changes by freeroot:

Engineers will now perform better depending on their rank.

changes by coderpatsy:

Fixed lag caused by incorrect calendar tooltip behavior

Blast Furnace will now generate TC from excessive heat
Black Nexus will now provide a 10% boost to relic stations
Engineers will now display instructional tooltip
Astromancy

v 1.4.0.0 (4 oct 2016)
changes by freeroot:

RR will be limited by 100 units
Numerous optimizations and fixes (like, literally numerous)

1000K Years challenge
Anarchy challenge
Kittens will die if there are no housing during Winter Has Come
___
Time crystal shattering will now generate chronoheat

Chronofurnace
Time Impedance

Furthest Ring
Blazar
Dark Nova

v 1.3.1.3 (29 oct 2016)
Advanced AM Reactors will now cost less AM and much more effective
Void Reactors
Winter has Come challenge

v 1.3.1.2 (25 oct 2016)

Bio Labs will provide better science bonus when powered
Added visual indication for kittens when user builds huts for a first time
Added zebra information for reset panel if player is playing IW

v 1.3.1.1 (23 oct 2016)
changes by freeroot:

Burned paragon will now provide various bonuses
_
Loading animation
Message of the day toolbar
Factory Optimization

v 1.3.1.0 (14 oct 2016)
CMBR toolbar
AM Drive
AM Fission

Increased most of the space missions ETA time
Kittens will now die at the rate one per 5 second

v 1.3.0.0 (1 oct 2016)
