@@ -2,8 +2,12 @@ v 1.4.0.4 (25 jan 2017)
 Turn Smoothly was renamed to Chronosurge
 Blazar will now boost RR by 2%
 Black Nova will now boost energy production by 2%
+
 Ctrl+Click will now by x10 buildings
+
 Scientist trait effect was changed from 1% to 5%
+Quarry base price and coal production were slightly buffed.
+Ziggurat base price and megalith craft price were slightly reduced.
 
 changes by tommitscheck:
 Fixed Stats menu item not working in FF
